Better fix for issue #20. This should also fix the white unreadable headers of some tables.

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -382,7 +382,7 @@ border-radius: 0 0 5px 5px;
 }
 
 
-.header
+body > .header
 {
     color:#FFF;
     position: relative;
@@ -392,8 +392,14 @@ border-radius: 0 0 5px 5px;
     margin: 20px auto;
     height: 82px;
 }
-.header .message
+body > .header > .message
 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 400px;
+  margin: auto;
   background-color: #666;
   border-radius: 5px;
   padding: 10px 15px;
@@ -402,13 +408,13 @@ border-radius: 0 0 5px 5px;
   text-align:center;
   border: 1px solid darkgrey;
 }
-.header .message a
+body > .header .message a
 {
   color: #fff;
   font-weight:bold;
 }
 
-.header .cover-logo {
+body > .header > .cover-logo {
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -416,15 +422,15 @@ border-radius: 0 0 5px 5px;
 	height: 82px;
 }
 
-.login {
+body > .header > .login {
 	position: absolute;
-	bottom: 0;
+	bottom: -10px;
 	right: 0;
 	text-align:right;
 	vertical-align: bottom;
 }
 
-.login table {
+.login > table {
 	margin: 0;
 	border-spacing: 0;
 }
